--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-site_base_url: "https://USERNAME.github.io/REPO"   # CHANGE to your GitHub Pages URL
+site_base_url: "https://jsparkhtx.github.io/Houston-ISD-Daily"
 show_title: "Greater Houston ISD Daily"
 show_description: "Daily readouts of last-24-hour news about Greater Houston Independent School Districts."
 show_author: "PlayHereHouston"
