--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,10 +1,10 @@
 name: Daily Build
 
 on:
- schedule:
-  - cron: "0 10 * * *"   # 5:00 AM CT during Daylight Saving
-  - cron: "0 11 * * *"
-  workflow_dispatch:
+  workflow_dispatch:     
+  schedule:
+    - cron: "0 10 * * *"   # 5:00 AM CT during Daylight Saving
+    - cron: "0 11 * * *"   # 5:00 AM CT during Standard
 
 permissions:
   contents: write
