--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ lxml==5.3.0
 cssselect==1.2.0
 pydub==0.25.1
 feedgen==1.0.0
-edge-tts==6.1.12
+gTTS==2.5.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pyyaml==6.0.2
