--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -35,13 +35,14 @@ jobs:
         run: |
           python src/main.py
 
-      - name: Commit & push changes
+           - name: Commit & push changes
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
           git add -A
           if ! git diff --cached --quiet; then
-            git commit -m "Daily build"
+            git commit -m "Daily build: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
             git push
           else
             echo "No changes to commit."
+          fi
