--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,10 +1,10 @@
 name: Daily Build
 
 on:
-  workflow_dispatch:     
+  workflow_dispatch:
   schedule:
     - cron: "0 10 * * *"   # 5:00 AM CT during Daylight Saving
-    - cron: "0 11 * * *"   # 5:00 AM CT during Standard
+    - cron: "0 11 * * *"   # 5:00 AM CT during Standard Time
 
 permissions:
   contents: write
@@ -35,7 +35,7 @@ jobs:
         run: |
           python src/main.py
 
-           - name: Commit & push changes
+      - name: Commit & push changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
