--- a/config.yaml
+++ b/config.yaml
@@ -25,3 +25,6 @@ episode_prefix: "houston-isd-roundup"
 #   - "springbranchisd.com"
 #   - "springisd.org"
 #   - "kleinisd.net"
+#   - "yahoo.com"
+#   - "chron.com"
+
