--- a/config.yaml
+++ b/config.yaml
@@ -28,3 +28,20 @@ episode_prefix: "houston-isd-roundup"
 #   - "yahoo.com"
 #   - "chron.com"
 
+# In config.yaml
+rss_feeds:
+  # Houston-area general/education
+  - https://www.houstonpublicmedia.org/rss/education/
+  - https://abc13.com/feed/              # ABC13 (general, we’ll filter by ISD terms)
+  - https://communityimpact.com/rss/     # Community Impact (regional)
+  - https://katytimes.com/search/?f=rss&t=article&l=50&s=start_time&sd=desc
+  - https://coveringkaty.com/feed/
+  - https://www.fortbendstar.com/search/?f=rss&t=article&l=50&s=start_time&sd=desc
+  - https://www.baytownsun.com/search/?f=rss&t=article&l=50&s=start_time&sd=desc
+  - https://www.springisd.org/site/RSS.aspx?DomainID=4&ModuleInstanceID=984&PageID=1      # if 404, delete
+  - https://www.aldineisd.org/feed/                                                         # if available
+  - https://www.springbranchisd.com/feed/                                                   # if available
+  - https://www.kleinisd.net/feed/                                                          # if available
+  - https://www.pasadenaisd.org/feed/                                                       # if available
+  - https://www.humbleisd.net/site/RSS.aspx?DomainID=4&ModuleInstanceID=123&PageID=1       # if available
+  - https://www.ccisd.net/site/RSS.aspx?DomainID=4&ModuleInstanceID=38&PageID=1            # Clear Creek ISD (if RSS)
