--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
 requests==2.32.3
 feedparser==6.0.11
-readability-lxml==0.8.1
 beautifulsoup4==4.12.3
-lxml==5.3.0
-cssselect==1.2.0
-pydub==0.25.1
-feedgen==1.0.0
-gTTS==2.5.1
-python-dateutil==2.9.0.post0
-pytz==2024.1
-pyyaml==6.0.2
-lxml_html_clean==0.3.1
+readability-lxml==0.8.1
+lxml==5.2.2
+PyYAML==6.0.2
+tqdm==4.66.5
